--- a/src/templates/form/apache-config.handlebars
+++ b/src/templates/form/apache-config.handlebars
@@ -1,39 +1,43 @@
-<div class="form-group">
-  <label for="serverName">Server Name</label>
-  <input type="text" name="serverName" id="serverName" class="form-control" value="{{serverName}}" />
+<div class="tab-content">
+
+  <div class="tab-pane active" id="home">
+    <div class="form-group">
+      <label for="serverName">Server Name</label>
+      <input type="text" name="serverName" id="serverName" class="form-control" value="{{serverName}}" />
+    </div>
+
+    <div class="form-group">
+      <label for="virtualHost-tgl">Virtual Host</label>
+      <input type="checkbox" id="virtualHost-tgl" checked="checked" class="form-control checkbox-inline" />
+      <span>same as server name</span>
+      <input    name="virtualHost"
+                type="text"
+                class="form-control"
+                style="display:none;"
+                placeholder="127.0.0.1"
+                disabled="disabled"
+                value="{{virtualHost}}" />
+    </div>
+
+    <label >Server Aliases</label>
+    <textarea name="ServerAlias" class="form-control" rows="1">{{ServerAlias}}</textarea>
+
+    <label>Document Root</label>
+    <input type="text" name="documentRoot" class="form-control" value="{{documentRoot}}" />
+
+
+  <div class="tab-pane" id="mod-ssl">
+
+    <div class="ssl-btn form-group" style="display:none;clear:left;">
+      <input type="hidden" name="ssl" value="ssl" class="ssl"/>
+
+      <label for="certFile" >Certificate File</label>
+      <input type="text" name="certFile" id="certFile" class="form-control" />
+      <br/>
+      <label for="keyFile">Key File</label>
+      <input type="text" name="keyFile" id="keyFile" class="form-control" />
+    </div>
+
+  </div>
+
 </div>
-
-<div class="form-group">
-  <label for="virtualHost-tgl">Virtual Host</label>
-  <input type="checkbox" id="virtualHost-tgl" checked="checked" class="form-control checkbox-inline" />
-  <span>same as server name</span>
-  <input    name="virtualHost"
-            type="text"
-            class="form-control"
-            style="display:none;"
-            placeholder="127.0.0.1"
-            disabled="disabled"
-            value="{{virtualHost}}" />
-</div>
-
-<label >Server Aliases</label>
-<textarea name="serverAliases" class="form-control" rows="1">{{serverAliases}}</textarea>
-
-<label>Document Root</label>
-<input type="text" name="documentRoot" class="form-control" value="{{documentRoot}}" />
-
-<button type="button" class="btn btn-default" id="ssl-btn">SSL</button>
-
-<div class="ssl-btn form-group" style="display:none;clear:left;">
-  <input type="hidden" name="ssl" value="ssl" class="ssl"/>
-
-  <label for="certFile" >Certificate File</label>
-  <input type="text" name="certFile" id="certFile" class="form-control" />
-  <br/>
-  <label for="keyFile">Key File</label>
-  <input type="text" name="keyFile" id="keyFile" class="form-control" />
-</div>
-
-<hr/>
-<button class="refresh">refresh</button>
-<button class="copy">Copy</button>
