use ssl file path from form

--- a/src/templates/config/apache-config.handlebars
+++ b/src/templates/config/apache-config.handlebars
@@ -19,8 +19,8 @@
 
 
   SSLEngine On
-  SSLCertificateFile /etc/apache2/ssl/binaryalchemist.crt
-  SSLCertificateKeyFile /etc/apache2/ssl/binaryalchemist.key
+  SSLCertificateFile {{certFile}}
+  SSLCertificateKeyFile {{keyFile}}
 
   {{#if documentRoot}}DocumentRoot {{documentRoot}}
   <Directory "{{documentRoot}}">
